Wrap language picker in extra div, so can have fixed width and centred

--- a/http/style.css
+++ b/http/style.css
@@ -41,12 +41,16 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  width: 30%;
-  padding: 20px 35% 20px 35%;
+  width: 100%;
   height: 100%;
-  display: none;
   background: #fff;
   z-index: 9999999;
+  display: none;
+}
+
+#languagepicker div {
+  width: 350px;
+  margin: 0 auto;
 }
 
 
